# OS_CW_2Y

./: CMakeLists.txt  README.md
COR/: CMakeLists.txt
COR/include/: handlers.h
COR/src/: handlers.cpp
DC_utilities/: CMakeLists.txt
DC_utilities/include/: dc_utilities.h
DC_utilities/src/: dc_utilities.cpp
IPC/: CMakeLists.txt
IPC/include/: ipc.h
IPC/src/: ipc.cpp
allocator/: CMakeLists.txt
allocator/allocator/: CMakeLists.txt
allocator/allocator/include/: allocator.h  allocator_guardant.h  allocator_test_utils.h  allocator_with_fit_mode.h
allocator/allocator_boundary_tags/: CMakeLists.txt
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_global_heap/: CMakeLists.txt
allocator/allocator_global_heap/include/: allocator_global_heap.h
associative_container/: CMakeLists.txt
associative_container/include/: associative_container.h
associative_container/search_tree/: CMakeLists.txt
associative_container/search_tree/include/: search_tree.h
associative_container/search_tree/indexing_tree/: CMakeLists.txt
associative_container/search_tree/indexing_tree/b_tree/: CMakeLists.txt
associative_container/search_tree/indexing_tree/b_tree/include/: b_tree.h
command/: CMakeLists.txt
command/include/: command.h
command/src/: command.cpp
common/: CMakeLists.txt
flyweight/: CMakeLists.txt
flyweight/flyweight_string/: CMakeLists.txt
flyweight/flyweight_string/include/: flyweight_string.h
flyweight/flyweight_string/singleton/: CMakeLists.txt
flyweight/flyweight_string/singleton/include/: singleton.h
flyweight/flyweight_string/singleton/src/: singleton.cpp
flyweight/flyweight_string/src/: flyweight_string.cpp
inner_architecture/: CMakeLists.txt
inner_architecture/include/: inner_architecture.h
inner_architecture/src/: inner_architecture.cpp
interaction/: CMakeLists.txt
interaction/include/: interaction.h
interaction/src/: interaction.cpp
logger/: CMakeLists.txt
logger/WIN_logging_server/: CMakeLists.txt
logger/WIN_logging_server/src/: WIN_logging_server.cpp
logger/client_logger/: CMakeLists.txt
logger/client_logger/include/: client_logger.h  client_logger_builder.h
logger/logger/: CMakeLists.txt
logger/logger/include/: logger.h
logger/logger/src/: logger.cpp
logger/logger_singleton/: CMakeLists.txt
logger/logger_singleton/include/: singleton.h
logger/logger_singleton/src/: singleton.cpp
logger/server_logger/: CMakeLists.txt
logger/server_logger/include/: server_logger.h  server_logger_builder.h
logger/server_logger/src/: server_logger.cpp  server_logger_builder.cpp
relevant_type/: CMakeLists.txt
relevant_type/include/: user.h
relevant_type/src/: user.cpp
test/: CMakeLists.txt  SL_config.json  c2.txt  command.txt  mrn.cpp
