cmake_minimum_required(VERSION 3.21)
project(os_cw_lggr
        VERSION 1.0
        DESCRIPTION "logger libraries"
        LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory (client_logger)
add_subdirectory (logger)
add_subdirectory (logger_singleton)
add_subdirectory (server_logger)
add_subdirectory (WIN_logging_server)
